[workspace]
resolver = "3"
members = [
  "application/app_service",
  "domain/model",
  "domain/use_case",
  "infrastructure/adapters/postgre_db",
  "infrastructure/adapters/rest_api",
  "utils/load_env",
]

[workspace.dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "uuid",
  "postgres",
  "uuid",
  "macros",
  "chrono",
  "tls-rustls-ring-native-roots",
] }
uuid = { version = "1.17.0", features = ["v4", "serde", "fast-rng"] }
async-trait = "0.1.88"
thiserror = "2.0.15"
